change to functional&updated

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 .login_container {
-  background: rgba(2, 2, 2, 0.7);
+  background: rgba(15, 15, 15, 0.7);
   padding: 50px;
   color: white;
   top: 70px;
@@ -35,4 +35,10 @@
 
 .about-container {
   height: 100vh;
+}
+.text-color {
+  color: green !important;
+}
+.card-head-text {
+  color: rgb(177, 103, 6) !important;
 }
